# course0

./: .gitignore  AGENTS.md  README.md  clear_garbage.sh
_more/doc/: lecture_prompt.md
_more/skill/: SKILL.md  code-doc-generator.md  code_skill.md  course0skill.md  llm-wiki.md  test-script-generator.md
code/: README.md
code/數學/05-機率統計/statr/: README.md  publish.sh  pyproject.toml
code/數學/05-機率統計/statr/examples/: anova_example.py  basic_stats.py  chisq_test_example.py  plot_ci_example.py  t_test_example.py  z_test_example.py
code/數學/05-機率統計/statr/statr/: __init__.py  plot.py
code/數學/05-機率統計/statr/tests/: __init__.py  test_statr.py
code/程式與數學/_ai/lean4py/: AGENTS.md  pyproject.toml
code/程式與數學/_ai/lean4py/examples/: 04_number_theory.py
code/程式與數學/_ai/lean4py/lean4py/: __init__.py  algebra.py  prover.py
code/程式與數學/_ai/lean4py/tests/: test_real_analysis.py
code/系統程式/tool/make0py/: README.md  pyproject.toml  ssl_app
code/系統程式/tool/make0py/example/hello_make0py/: README.md  make0.py  math_utils.c  math_utils.h  ssl_app  ssl_app.c
code/系統程式/tool/make0py/src/make0/: main.py
code/系統程式/tool/make0py/src/make0.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
lecture/數學/: README.md
lecture/機器學習/: README.md
lecture/演算法/: README.md
lecture/系統程式/: README.md
lecture/網站設計/: README.md
lecture/計算機結構/: README.md
lecture/軟體工程/: README.md  課程.md
wiki/: AGENTS.md  README.md  ccc.md  index.md  log.md  todo.md
wiki/source/: 目錄說明.md
wiki/數學/: index.md  log.md  代數學.md  密碼學.md  幾何學.md  廣義相對論.md  微分幾何.md  微積分.md  拓撲學.md  數值分析.md  數學的歷史.md  數論.md  機率統計.md  測度論.md  狹義相對論.md  複變函數.md  邏輯學.md  量子電腦.md  隨機微積分.md  集合論.md
wiki/機器學習/: Adam.md  Andrej_Karpathy.md  EM演算法.md  GPT.md  Geoffrey_Hinton.md  Gym.md  K-均值.md  K-近鄰.md  PyTorch.md  TensorFlow.md  Transformer.md  Yann_LeCun.md  Yoshua_Bengio.md  index.md  log.md  microgpt.md  mini-openclaw.md  scikit-learn.md  世界模型.md  主成分分析.md  分類演算法.md  卷積神經網路.md  反傳遞演算法.md  多模態模型.md  大型語言模型.md  強化學習.md  影像處理與識別.md  循環神經網路.md  推薦系統.md  損失函數.md  搜尋法.md  支持向量機.md  散射網路.md  梯度下降法.md  模型評估.md  樸素貝葉斯.md  機器學習的歷史.md  正則化.md  決策樹.md  深度學習.md  (+18 more)
wiki/演算法/: Python.md  index.md  log.md  分割擊破法.md  列舉法.md  前處理法.md  動態規劃法.md  化簡法.md  圖形演算法.md  字串演算法.md  排序演算法.md  搜尋法.md  時間複雜度.md  暴力法.md  查表法.md  梯度下降法.md  演算法的歷史.md  爬山演算法.md  空間複雜度.md  網路流.md  線性規劃.md  蒙地卡羅法.md  計算幾何.md  貪婪法.md  資料結構.md  近似演算法.md  迭代法.md  逼近法.md  遞迴法.md  遺傳演算法.md  隨機演算法.md  雜湊法.md
wiki/程式與數學/: index.md  log.md  代數學.md  幾何學.md  微積分.md  數值分析.md  數論.md  機率統計.md  泛函分析.md  物理數學.md  程式與數學的歷史.md  自動機理論.md  變分學.md  資訊理論.md  量子力學.md  集合論.md
wiki/系統程式/: AI的加速技術.md  BASIC.md  C++.md  C語言.md  Dennis_Ritchie.md  Fabrice_Bellard.md  GDB_LLDB.md  Go.md  HTTP.md  Haskell.md  Ken_Thompson.md  Kubernetes.md  LISP.md  LLVM.md  Lambda演算.md  Linus_Torvalds.md  Linux系統呼叫.md  Make_CMake.md  Noam_Chomsky.md  POSIX.md  Prolog.md  QEMU.md  RISC-V.md  Rust.md  Shell腳本.md  Socket網路介面.md  TCP-IP協定.md  Unix.md  Unix_v6.md  c4.md  index.md  log.md  xv6.md  zig語言.md  並行計算與異構平台.md  作業系統.md  函數式編程.md  區塊鏈與比特幣.md  同步與通訊.md  圖靈機.md  (+21 more)
wiki/網頁設計/: API.md  Blog系統.md  CI_CD.md  (+28 more)
(+1682 files in other folders)
