[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statr"
version = "0.1.0"
description = "Python Statistical Library inspired by R"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Statr Authors"}
]
keywords = ["statistics", "probability", "hypothesis-testing", "r-style"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "scipy",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/statr/statr"
Documentation = "https://github.com/statr/statr#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["statr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"