[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lean4py"
version = "0.2.0"
description = "A Python library inspired by Lean's mathlib for formal mathematics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Chung-Chen Chen", email = "ccc@nqu.edu.tw"}
]
keywords = ["mathematics", "formal-verification", "theorem-proving", "lean"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lean4py*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]